16_subseq/grade.txt
Grading at Fri Sep 21 03:02:34 UTC 2018
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:5:9: error: variable ‘start’ set but not used [-Werror=unused-but-set-variable]
     int start = 0;
         ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
